tooling/nargo_cli/tests/snapshots/execution_failure/simple_infinite_recursive_lambda/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: function `bar` cannot return without recursing
   ┌─ src/main.nr:13:18
   │
13 │ unconstrained fn bar() {
   │                  --- function cannot return without recursing
   │

error: Assertion failed: Stack too deep
   ┌─ src/main.nr:14:5
   │
14 │     bar();
   │     -----
   │
   = Call stack:
        1: main
                at src/main.nr:4:9
        2: foo
                at src/main.nr:9:5
     ┌─ 3: bar
     │          at src/main.nr:14:5
     └─ (repeated 10239 times)

Failed assertion
