tooling/nargo_cli/tests/snapshots/execution_failure/simple_infinite_recursive_lambda/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: function `bar` cannot return without recursing
   ┌─ src/main.nr:13:18
   │
13 │ unconstrained fn bar() {
   │                  --- function cannot return without recursing
   │

error: Comptime Stack Overflow
   ┌─ src/main.nr:14:5
   │
14 │     bar();
   │     ----- Exceeded the recursion limit
   │
   = Call stack:
     1: ?
             at src/main.nr:1:4
     2: main
             at src/main.nr:4:9
     3: foo
             at src/main.nr:9:5
     4: bar
             at src/main.nr:14:5
     5: bar
             at src/main.nr:14:5
     6: bar
             at src/main.nr:14:5
     7: bar
             at src/main.nr:14:5
     8: bar
             at src/main.nr:14:5
     9: bar
             at src/main.nr:14:5
     10: bar
             at src/main.nr:14:5
     11: bar
             at src/main.nr:14:5
     12: bar
             at src/main.nr:14:5
     13: bar
             at src/main.nr:14:5
     14: bar
             at src/main.nr:14:5
     15: bar
             at src/main.nr:14:5
     16: bar
             at src/main.nr:14:5
     17: bar
             at src/main.nr:14:5
     18: bar
             at src/main.nr:14:5
     19: bar
             at src/main.nr:14:5
     20: bar
             at src/main.nr:14:5
     21: bar
             at src/main.nr:14:5
     22: bar
             at src/main.nr:14:5
     23: bar
             at src/main.nr:14:5
     24: bar
             at src/main.nr:14:5
     25: bar
             at src/main.nr:14:5
     26: bar
             at src/main.nr:14:5
     27: bar
             at src/main.nr:14:5
     28: bar
             at src/main.nr:14:5
     29: bar
             at src/main.nr:14:5
     30: bar
             at src/main.nr:14:5
     31: bar
             at src/main.nr:14:5
     32: bar
             at src/main.nr:14:5
     33: bar
             at src/main.nr:14:5
     34: bar
             at src/main.nr:14:5
     35: bar
             at src/main.nr:14:5
     36: bar
             at src/main.nr:14:5
     37: bar
             at src/main.nr:14:5
     38: bar
             at src/main.nr:14:5
     39: bar
             at src/main.nr:14:5
     40: bar
             at src/main.nr:14:5
     41: bar
             at src/main.nr:14:5
     42: bar
             at src/main.nr:14:5
     43: bar
             at src/main.nr:14:5
     44: bar
             at src/main.nr:14:5
     45: bar
             at src/main.nr:14:5
     46: bar
             at src/main.nr:14:5
     47: bar
             at src/main.nr:14:5
     48: bar
             at src/main.nr:14:5
     49: bar
             at src/main.nr:14:5
     50: bar
             at src/main.nr:14:5
     51: bar
             at src/main.nr:14:5
     52: bar
             at src/main.nr:14:5
     53: bar
             at src/main.nr:14:5
     54: bar
             at src/main.nr:14:5
     55: bar
             at src/main.nr:14:5
     56: bar
             at src/main.nr:14:5
     57: bar
             at src/main.nr:14:5
     58: bar
             at src/main.nr:14:5
     59: bar
             at src/main.nr:14:5
     60: bar
             at src/main.nr:14:5
     61: bar
             at src/main.nr:14:5
     62: bar
             at src/main.nr:14:5
     63: bar
             at src/main.nr:14:5
     64: bar
             at src/main.nr:14:5
     65: bar
             at src/main.nr:14:5
     66: bar
             at src/main.nr:14:5
     67: bar
             at src/main.nr:14:5
     68: bar
             at src/main.nr:14:5
     69: bar
             at src/main.nr:14:5
     70: bar
             at src/main.nr:14:5
     71: bar
             at src/main.nr:14:5
     72: bar
             at src/main.nr:14:5
     73: bar
             at src/main.nr:14:5
     74: bar
             at src/main.nr:14:5
     75: bar
             at src/main.nr:14:5
     76: bar
             at src/main.nr:14:5
     77: bar
             at src/main.nr:14:5
     78: bar
             at src/main.nr:14:5
     79: bar
             at src/main.nr:14:5
     80: bar
             at src/main.nr:14:5
     81: bar
             at src/main.nr:14:5
     82: bar
             at src/main.nr:14:5
     83: bar
             at src/main.nr:14:5
     84: bar
             at src/main.nr:14:5
     85: bar
             at src/main.nr:14:5
     86: bar
             at src/main.nr:14:5
     87: bar
             at src/main.nr:14:5
     88: bar
             at src/main.nr:14:5
     89: bar
             at src/main.nr:14:5
     90: bar
             at src/main.nr:14:5
     91: bar
             at src/main.nr:14:5
     92: bar
             at src/main.nr:14:5
     93: bar
             at src/main.nr:14:5
     94: bar
             at src/main.nr:14:5
     95: bar
             at src/main.nr:14:5
     96: bar
             at src/main.nr:14:5
     97: bar
             at src/main.nr:14:5
     98: bar
             at src/main.nr:14:5
     99: bar
             at src/main.nr:14:5
     100: bar
             at src/main.nr:14:5

Error interpreting main function
